src/test/ui/consts/const-eval/unused-broken-const.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/unused-broken-const.rs:5:18
   |
LL | const FOO: i32 = [][0];
   |                  ^^^^^ index out of bounds: the length is 0 but the index is 0

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
